# testimonial-backend

./: .gitignore  fix_database.py  main.py  pyproject.toml  requirements.txt  test_api.py
app/: __init__.py  extensions.py
app/forms/: __init__.py  auth_form.py  preserved_testimonial_form.py  testimonial_form.py
app/models/: __init__.py  preserved_testimonial.py  testimonial.py  user.py
app/routes/: __init__.py  admin.py  auth.py  root.py
app/utils/: db_handler.py  errors.py
migrations/versions/: 1a8692bf849b_update_testimonial_schema_with_new_.py  8669be3af2dc_initial_migration_with_updated_.py  92c9897152f9_minor_changes.py  a3f99f952a6a_initial_migration_after_cleanup.py  b9d8a965096a_add_user_id_to_preservedtestimonial.py
